# AWS-S3-Cpp-REST-API

./: CMakeLists.txt  README.md
dependencies/encode/include/: SHA1.h
dependencies/encode/src/: CMakeLists.txt  SHA1.cpp
dependencies/filewatcher/include/: Guard.h
dependencies/filewatcher/src/: CMakeLists.txt  Guard.cpp
include/: Helper.h  S3.h
src/: CMakeLists.txt  Helper.cpp  S3.cpp  main.cpp
